# open-gamalta

./: .gitignore  README.md  controller.py  detector.py  pyproject.toml
documentation/: first_explorations.md  protocol_specification.md  scenes_extension.md
documentation/archive/: GamaltaProtocolLightning.md
examples/: basic_control.py  cli.py  color_cycle.py  discover.py  lightning_demo.py  probe.py  query_scene.py  rainbow_loop.py
gamalta/: __init__.py  client.py  exceptions.py  scenes.py  types.py
gamalta/protocol/: __init__.py  commands.py  constants.py  packet.py
gamalta/transport/: __init__.py  base.py  ble.py
web/: Makefile  README.md  pyproject.toml
web/backend/: __init__.py  config.py  dependencies.py  main.py  models.py  websocket.py
web/backend/routers/: __init__.py  control.py  device.py  effects.py  modes.py
web/backend/services/: __init__.py  device_manager.py
web/frontend/: package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/api/: client.ts
web/frontend/src/components/: BrightnessSlider.tsx  ColorPicker.tsx  ConnectionStatus.tsx  LightStatus.tsx  LightningControls.tsx  ModeSelector.tsx  PowerButton.tsx  index.ts
web/frontend/src/hooks/: useWebSocket.ts
web/frontend/src/stores/: deviceStore.ts
web/frontend/src/types/: device.ts
