[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamalta"
version = "0.1.0"
description = "Open source controller for Gamalta Bluetooth smart lights"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex Frutkin" }
]
keywords = ["bluetooth", "ble", "aquarium", "light", "smart-home", "gamalta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/alexfrutkin/open-gamalta"
Repository = "https://github.com/alexfrutkin/open-gamalta"

[tool.hatch.build.targets.wheel]
packages = ["gamalta"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
